--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -1,5 +1,8 @@
 # Allow anonymous FTP? (Beware - allowed by default if you comment this out).
-anonymous_enable=NO
+anonymous_enable=YES
+#
+# Disable delete commands
+cmds_denied=DELE,RMD
 #
 # Uncomment this to allow local users to log in.
 local_enable=YES
